--- a/Nucleo-F041K6/CubeMX/default/default.ioc
+++ b/Nucleo-F041K6/CubeMX/default/default.ioc
@@ -6,11 +6,12 @@ USART2.IPParameters=VirtualMode-Asynchronous
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F042K6Tx
 PA15.GPIOParameters=GPIO_Label
-Mcu.PinsNb=7
+Mcu.PinsNb=8
 ProjectManager.NoMain=false
 RCC.PLLCLKFreq_Value=16000000
 PA14.GPIO_Label=SWCLK
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true
+PA3.GPIOParameters=GPIO_Label
 ProjectManager.DefaultFWLocation=true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.DeletePrevious=true
@@ -31,14 +32,15 @@ ProjectManager.TargetToolchain=Makefile
 Mcu.ThirdPartyNb=0
 Mcu.IPNb=4
 ProjectManager.PreviousToolchain=
-Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.Pin6=PB3
+Mcu.Pin7=VP_SYS_VS_Systick
 Mcu.Pin0=PF0-OSC_IN
 PF0-OSC_IN.Mode=HSE-External-Clock-Source
 Mcu.Pin1=PA2
-Mcu.Pin2=PA13
-Mcu.Pin3=PA14
-Mcu.Pin4=PA15
-Mcu.Pin5=PB3
+Mcu.Pin2=PA3
+Mcu.Pin3=PA13
+Mcu.Pin4=PA14
+Mcu.Pin5=PA15
 ProjectManager.ProjectBuild=false
 PF0-OSC_IN.GPIO_Label=MCO
 board=NUCLEO-F042K6
@@ -75,6 +77,7 @@ ProjectManager.CoupleFile=false
 PB3.Signal=GPIO_Output
 Mcu.Package=LQFP32
 RCC.TimSysFreq_Value=8000000
+PA3.Locked=true
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 PA14.GPIOParameters=GPIO_Label
@@ -97,5 +100,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DeviceId=STM32F042K6Tx
 ProjectManager.LibraryCopy=0
 PB3.Locked=true
+PA3.GPIO_Label=A2
+PA3.Signal=GPIO_Input
 PA2.Locked=true
 PB3.GPIO_Label=LD3
