--- a/Nucleo-F042K6/CubeMX/default/default.ioc
+++ b/Nucleo-F042K6/CubeMX/default/default.ioc
@@ -10,8 +10,9 @@ Mcu.PinsNb=8
 ProjectManager.NoMain=false
 RCC.PLLCLKFreq_Value=16000000
 PA14.GPIO_Label=SWCLK
+PA3.GPIO_PuPd=GPIO_PULLUP
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true
-PA3.GPIOParameters=GPIO_Label
+PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
 ProjectManager.DefaultFWLocation=true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.DeletePrevious=true
